3ra Practica Integradora

--- a/src/config/.env.default
+++ b/src/config/.env.default
@@ -2,3 +2,6 @@ PORT = {PORT}
 MONGO_URL = {{MONGO_URL}}
 ADMIN_NAME = {{AdminName}}
 ADMIN_PASSWORD = {{AdminPassword}}
+MAILING_USER = {{MAILING_USER}}
+MAILING_SERVICE = {{MAILING_SERVICE}}
+MAILING_PASSWORD = {{MAILING_PASSWORD}}
